[package]
name = "pglite-oxide"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Rust helpers for embedding the Electric SQL pglite WebAssembly PostgreSQL runtime"
readme = "README.md"
repository = "https://github.com/f0rr0/pglite-oxide"
homepage = "https://github.com/f0rr0/pglite-oxide"
documentation = "https://docs.rs/pglite-oxide"
keywords = ["postgres", "pglite", "wasm", "database", "embedded"]
categories = ["database-implementations", "wasm", "development-tools::testing"]
license = "MIT"
exclude = ["Cargo.toml.orig"]

[dependencies]
anyhow = "1"
tar = "0.4"
xz2 = "0.1"
directories = "5"
wasmtime = "19"
wasmtime-wasi = { version = "19", default-features = false, features = ["preview1"] }
cap-std = "3"
getrandom = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
once_cell = "1.19"
flate2 = "1"
md-5 = "0.10"

[dev-dependencies]
tempfile = "3"
anyhow = "1"
serial_test = "3"
